--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <DOCTYPE html>
   <html>
-    <title>
+   <head> 
+     <title>
     PRVI NASLOV
     </title>
-    <head>
-   NASLOV STRANICEE
+   
     </head>
+    <body>
+      <h1>drugi dio teksta</h1>
+    </body>
       </html>
