--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
-<DOCTYPE html>
-  <html>
-   <head> 
-     <title>
-    PRVI NASLOV
-    </title>
-   
-    </head>
-    <body>
-      <h1>drugi dio teksta</h1>
-      <h2>treci dio teksta </h2>
-    </body>
-      </html>
+<!DOCTYPE html>
+<html lang="hr">
+<head>
+
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+<title>Moja firma logika</title>
+
+</head>
+
+<body>
+  <header>
+<h1>Logika: informacije o nama</h1>
+</header>
+<nav>
+<ul>
+  <li><a href="#onama">O nama</a></li>
+  <li><a href="#nasedj">Naše djelatnosti</a></li>
+  <li><a href="kontakt">Kontakt</a></li>
+</ul>
+</nav>
+</header>
+<hr>
+
+<footer>uvjeti</footer>
+</body>
+</html>
