--- a/index.html
+++ b/index.html
@@ -12,18 +12,41 @@
 
 <body>
   <header>
-<h1>Logika: informacije o nama</h1>
+
 </header>
 <nav>
 <ul>
   <li><a href="#onama">O nama</a></li>
   <li><a href="#nasedj">Naše djelatnosti</a></li>
-  <li><a href="kontakt">Kontakt</a></li>
+  <li><a href="#kontakt">Kontakt</a></li>
 </ul>
 </nav>
 </header>
 <hr>
+<section>
+  <h1 id="onama">o nama</h1>
+<p>osnovani 1900. godine od strane pere perića prvog</p>
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi, quae ad nostrum debitis reiciendis ratione tempore itaque perferendis enim repellat vel illum rerum qui consectetur, animi tempora recusandae, molestias velit.</p>
+<img src="logika.jpg" alt="slika knjige iz logike" width="300" height="400">
+</section>
+<hr>
+<section>
+  <h2 id="nasedj">Naše djelatnosti</h2>
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt, dolorum. Beatae eveniet nostrum ad modi ducimus aperiam eaque quasi corrupti dicta, quo vitae quod quidem officiis. Fugiat ducimus voluptatum eos.</p>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum explicabo aut sed omnis accusantium iste, ullam dolor doloribus reprehenderit sunt nulla, ipsum doloremque praesentium quia, consectetur ipsa fugiat voluptatibus. Ex!</p>
+</section>
+<img src="logika 2.png" alt="druga slika logike" width="500" height="700">
+</section>
+<hr>
+<section>
+  <h3 id="kontakt">kontakt</h3>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis delectus ad eaque soluta, cupiditate consequuntur quibusdam vel facilis accusamus assumenda reprehenderit. Velit accusantium totam cumque quisquam cum enim iure numquam?
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi voluptatum consequatur, vitae nisi facere expedita qui officia reiciendis sed quia tenetur, molestiae excepturi asperiores nobis voluptatem culpa. Possimus, quis debitis!
+</p>
+<img src="logika 3.jpg" alt="treća slika logike" width="500" height="700">
 
+</section>
+<hr>
 <footer>uvjeti</footer>
 </body>
 </html>
