--- a/index.html
+++ b/index.html
@@ -40,14 +40,18 @@
 <hr>
 <section>
   <h3 id="kontakt">kontakt</h3>
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis delectus ad eaque soluta, cupiditate consequuntur quibusdam vel facilis accusamus assumenda reprehenderit. Velit accusantium totam cumque quisquam cum enim iure numquam?
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi voluptatum consequatur, vitae nisi facere expedita qui officia reiciendis sed quia tenetur, molestiae excepturi asperiores nobis voluptatem culpa. Possimus, quis debitis!
-</p>
-<img src="logika 3.jpg" alt="treća slika logike" width="500" height="700">
+  <p><em>Pere Kotara 7</em> 10000 Zagreb</p>
+  <p><mark>logika@logi.ba</mark></p>
+  <p>Za sve vrste <strong>prigovora</strong> i <i>pohvala</i> javite nam se mailom</p>
+
+
+
 
 </section>
 <hr>
-<footer>uvjeti</footer>
+<footer>
+  <p><small>logika©2022</small></p>
+</footer>
 </body>
 </html>
 
