--- a/index.html
+++ b/index.html
@@ -49,6 +49,20 @@
 
 </section>
 <hr>
+
+<video width="320" height="240"  loop autoplay muted>
+  <source src="./media/video/video.mp4" type="video/mp4">
+
+  <audio controls>
+  <source src="./media/audio/horse.ogv" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+
+  
+ 
+  
+Your browser does not support the video tag.
+</video>
 <footer>
   <p><small>logika©2022</small></p>
 </footer>
